# http_getter2

./: Cargo.toml  www.google.com
src/: main.rs
