[package]
name = "http_getter2"
version = "0.1.0"
authors = ["illemonati <tonymiaotong@tioft.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
reqwest = "0.9.18"
regex = "1.1.9"
indicatif = "0.11.0"


[profile.release]
opt-level=3
lto=true
